2011-04-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/crtcall.s,
	* device/lib/z80/crtcall.s: new, added for RFE 3284870
	* device/lib/gbz80/Makefile.in,
	* device/lib/z80/Makefile.in: added crtcall
	* src/z80/gen.c(emitCall): use __sdcc_call_hl
	* src/z80/peep.c(z80MightRead): prevent HL from being optimized out
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/z80/spec.mk: added fwklib for statics.rel

2011-04-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkaomf51.c(OutputAOEMF51): use .omf extension

2011-04-12 Borut Razem <borut.razem AT gmail.com>

	* sdas/linksrc/lkar.c: fixed bug #3279445 -
	  [z80] Linker map file has /0 instead of divusigned.rel
	* src/SDCCerr.c, src/SDCCerr.h, src/SDCCval.c,
	  src/SDCCutil.c, src/SDCCutil.h:
	  fixed bug #3252262 - Universal character names broken

2011-04-10 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: sync with optralloc branch
	* src/port.h: cosmetic changes

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/cmdpars.y: removed warnings
	* support/regression/tests/logic.c, src/SDCCpeeph.c, src/SDCCasm.c,
	  src/SDCCicode.c, src/SDCCglobl.h, src/SDCCsystem.c:
	  sync with optralloc branch

2011-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/Makefile.in,
	* device/lib/mcs51/crtxpopbits.asm, device/lib/mcs51/crtxpopr0.asm: renamed
	* device/lib/mcs51/crtxpop.asm,
	* device/lib/mcs51/crtxpush.asm,
	* device/lib/mcs51/crtxpushr0.asm,
	* src/mcs51/gen.c (xstackRegisters, saveRegisters, unsaveRegisters,
	  genSend): fixed for new register order

2011-03-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (regs8051, serialRegAssign),
	* src/mcs51/ralloc.h: prefer to use adjacent ascending registers

2011-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklex.c,
	* src/SDCCast.c: small fixes

2011-03-28 Borut Razem <borut.razem AT gmail.com>
