@@ -461,6 +461,8 @@ struct
    "Duplicate initializer at position %d; ignoring previous." },
 { E_INVALID_UNIVERSAL, ERROR_LEVEL_ERROR,
    "incomplete universal character name \\%s." },
+{ W_UNIVERSAL_C99, ERROR_LEVEL_WARNING,
+   "universal character names are only valid in C99" },
 };
 
 /*
