@@ -1,3 +1,9 @@
+2011-04-13 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCerr.c, src/SDCCerr.h, src/SDCCval.c, src/SDCCutil.c,
+	  src/SDCCutil.h: added support for universal characters in strings,
+	  support for "\Uxxxxxxxx", warning if not C99
+
 2011-04-13 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/gbz80/crtcall.s,
